--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "api",
+  "author": "Flamarion Fagundes Pinto",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node build/src/server.js",
+    "dev": "nodemon src/server.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
